[gd_scene load_steps=11 format=4 uid="uid://4pqund3nukl7"]

[ext_resource type="Script" uid="uid://cb04v8ywdemyw" path="res://fase.gd" id="1_udkue"]
[ext_resource type="PackedScene" uid="uid://d30ebo7uakvax" path="res://player.tscn" id="2_qcukj"]
[ext_resource type="Texture2D" uid="uid://br1helh4gs5uq" path="res://oak_woods_v1.0/background/background_layer_1.png" id="4_vyao0"]
[ext_resource type="Texture2D" uid="uid://comrpksgigqmc" path="res://oak_woods_v1.0/background/background_layer_2.png" id="5_mtfop"]
[ext_resource type="Texture2D" uid="uid://dxlpjxq4smy2g" path="res://oak_woods_v1.0/background/background_layer_3.png" id="6_6nugs"]
[ext_resource type="Texture2D" uid="uid://bp483g1xas8vx" path="res://oak_woods_v1.0/oak_woods_tileset.png" id="6_vyao0"]
[ext_resource type="PackedScene" uid="uid://c6duwvg77ojo2" path="res://spawn.tscn" id="7_mtfop"]
[ext_resource type="AudioStream" uid="uid://21rpn2ncaisc" path="res://sounds/Police Story Theme.mp3" id="8_6nugs"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mtfop"]
texture = ExtResource("6_vyao0")
0:0/0 = 0
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
15:0/0 = 0
16:0/0 = 0
18:0/0 = 0
19:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
18:1/0 = 0
19:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, -8)
4:2/0 = 0
5:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
25:2/0 = 0
26:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
0:3/0 = 0
1:3/0 = 0
4:3/0 = 0
5:3/0 = 0
9:3/0 = 0
10:3/0 = 0
15:3/0 = 0
16:3/0 = 0
21:3/0 = 0
22:3/0 = 0
25:3/0 = 0
26:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
10:5/0 = 0
11:5/0 = 0
13:5/0 = 0
14:5/0 = 0
16:5/0 = 0
17:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
9:6/0 = 0
10:6/0 = 0
15:6/0 = 0
16:6/0 = 0
2:7/0 = 0
3:7/0 = 0
9:7/0 = 0
10:7/0 = 0
15:7/0 = 0
16:7/0 = 0
22:7/0 = 0
23:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
9:8/0 = 0
10:8/0 = 0
22:8/0 = 0
23:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
0:9/0 = 0
1:9/0 = 0
4:9/0 = 0
5:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
22:9/0 = 0
23:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
22:10/0 = 0
23:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
0:13/0 = 0
1:13/0 = 0
4:13/0 = 0
5:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
22:15/0 = 0
23:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
22:16/0 = 0
23:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
0:17/0 = 0
1:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
22:17/0 = 0
23:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
27:18/0 = 0
28:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
30:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
30:21/0 = 0

[sub_resource type="TileSet" id="TileSet_6nugs"]
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_mtfop")

[node name="Fase" type="Node2D" groups=["fase"]]
script = ExtResource("1_udkue")

[node name="ParallaxBackground" type="Node2D" parent="."]

[node name="ParallaxLayer" type="Parallax2D" parent="ParallaxBackground"]
scroll_scale = Vector2(0.6, 0.6)
repeat_size = Vector2(960, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2(3, 3)
texture = ExtResource("4_vyao0")
centered = false

[node name="ParallaxLayer2" type="Parallax2D" parent="ParallaxBackground"]
scroll_scale = Vector2(0.8, 0.8)
repeat_size = Vector2(960, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
scale = Vector2(3, 3)
texture = ExtResource("5_mtfop")
centered = false

[node name="ParallaxLayer3" type="Parallax2D" parent="ParallaxBackground"]
repeat_size = Vector2(960, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
scale = Vector2(3, 3)
texture = ExtResource("6_6nugs")
centered = false

[node name="CharacterBody2D" parent="." instance=ExtResource("2_qcukj")]
visibility_layer = 2
position = Vector2(102, 350)
collision_layer = 3
collision_mask = 3

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(477, 270)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
light_mask = 2
tile_map_data = PackedByteArray("AAAAACAAAAABAAEAAAAAACEAAAABAAIAAAABACAAAAACAAEAAAABACEAAAACAAIAAAACACAAAAABAAEAAAACACEAAAABAAIAAAADACAAAAACAAEAAAADACEAAAACAAIAAAAEACAAAAABAAEAAAAEACEAAAABAAIAAAAFACAAAAACAAEAAAAFACEAAAACAAIAAAAGACAAAAABAAEAAAAGACEAAAABAAIAAAAHACAAAAACAAEAAAAHACEAAAACAAIAAAAIACAAAAABAAEAAAAIACEAAAABAAIAAAAJACAAAAACAAEAAAAJACEAAAACAAIAAAAKACAAAAABAAEAAAAKACEAAAABAAIAAAALACAAAAACAAEAAAALACEAAAACAAIAAAAMACAAAAABAAEAAAAMACEAAAABAAIAAAANACAAAAACAAEAAAANACEAAAACAAIAAAAOACAAAAABAAEAAAAOACEAAAABAAIAAAAPACAAAAACAAEAAAAPACEAAAACAAIAAAAQACAAAAABAAEAAAAQACEAAAABAAIAAAARACAAAAACAAEAAAARACEAAAACAAIAAAASACAAAAABAAEAAAASACEAAAABAAIAAAATACAAAAACAAEAAAATACEAAAACAAIAAAAUACAAAAABAAEAAAAUACEAAAABAAIAAAAVACAAAAACAAEAAAAVACEAAAACAAIAAAAWACAAAAABAAEAAAAWACEAAAABAAIAAAAXACAAAAACAAEAAAAXACEAAAACAAIAAAAYACAAAAABAAEAAAAYACEAAAABAAIAAAAZACAAAAACAAEAAAAZACEAAAACAAIAAAAaACAAAAABAAEAAAAaACEAAAABAAIAAAAbACAAAAACAAEAAAAbACEAAAACAAIAAAAcACAAAAABAAEAAAAcACEAAAABAAIAAAAdACAAAAACAAEAAAAdACEAAAACAAIAAAAeACAAAAABAAEAAAAeACEAAAABAAIAAAAfACAAAAACAAEAAAAfACEAAAACAAIAAAAgACAAAAABAAEAAAAgACEAAAABAAIAAAAhACAAAAACAAEAAAAhACEAAAACAAIAAAAiACAAAAABAAEAAAAiACEAAAABAAIAAAAjACAAAAACAAEAAAAjACEAAAACAAIAAAAkACAAAAABAAEAAAAkACEAAAABAAIAAAAlACAAAAACAAEAAAAlACEAAAACAAIAAAAmACAAAAABAAEAAAAmACEAAAABAAIAAAAnACAAAAACAAEAAAAnACEAAAACAAIAAAAoACAAAAABAAEAAAAoACEAAAABAAIAAAApACAAAAACAAEAAAApACEAAAACAAIAAAAqACAAAAABAAEAAAAqACEAAAABAAIAAAArACAAAAACAAEAAAArACEAAAACAAIAAAAsACAAAAABAAEAAAAsACEAAAABAAIAAAAtACAAAAACAAEAAAAtACEAAAACAAIAAAAuACAAAAABAAEAAAAuACEAAAABAAIAAAAvACAAAAACAAEAAAAvACEAAAACAAIAAAAwACAAAAABAAEAAAAwACEAAAABAAIAAAAxACAAAAACAAEAAAAxACEAAAACAAIAAAAyACAAAAABAAEAAAAyACEAAAABAAIAAAAzACAAAAACAAEAAAAzACEAAAACAAIAAAA0ACAAAAABAAEAAAA0ACEAAAABAAIAAAA1ACAAAAACAAEAAAA1ACEAAAACAAIAAAA2ACAAAAABAAEAAAA2ACEAAAABAAIAAAA3ACAAAAACAAEAAAA3ACEAAAACAAIAAAA4ACAAAAABAAEAAAA4ACEAAAABAAIAAAA5ACAAAAACAAEAAAA5ACEAAAACAAIAAAA6ACAAAAABAAEAAAA6ACEAAAABAAIAAAA7ACAAAAACAAEAAAA7ACEAAAACAAIAAAAAAB8AAAABAAAAAAABAB8AAAACAAAAAAACAB8AAAABAAAAAAADAB8AAAACAAAAAAAEAB8AAAABAAAAAAAFAB8AAAACAAAAAAAGAB8AAAABAAAAAAAHAB8AAAACAAAAAAAIAB8AAAABAAAAAAAJAB8AAAACAAAAAAAKAB8AAAABAAAAAAALAB8AAAACAAAAAAAMAB8AAAABAAAAAAANAB8AAAACAAAAAAAOAB8AAAABAAAAAAAPAB8AAAACAAAAAAAQAB8AAAABAAAAAAARAB8AAAACAAAAAAASAB8AAAABAAAAAAATAB8AAAACAAAAAAAUAB8AAAABAAAAAAAVAB8AAAACAAAAAAAWAB8AAAABAAAAAAAXAB8AAAACAAAAAAAYAB8AAAABAAAAAAAZAB8AAAACAAAAAAAaAB8AAAABAAAAAAAbAB8AAAACAAAAAAAcAB8AAAABAAAAAAAdAB8AAAACAAAAAAAeAB8AAAABAAAAAAAfAB8AAAACAAAAAAAgAB8AAAABAAAAAAAhAB8AAAACAAAAAAAiAB8AAAABAAAAAAAjAB8AAAACAAAAAAAkAB8AAAABAAAAAAAlAB8AAAACAAAAAAAmAB8AAAABAAAAAAAnAB8AAAABAAAAAAAoAB8AAAACAAAAAAApAB8AAAABAAAAAAAqAB8AAAACAAAAAAArAB8AAAABAAAAAAAsAB8AAAACAAAAAAAtAB8AAAABAAAAAAAuAB8AAAACAAAAAAAvAB8AAAABAAAAAAAwAB8AAAACAAAAAAAxAB8AAAABAAAAAAAyAB8AAAACAAAAAAAzAB8AAAABAAAAAAA0AB8AAAACAAAAAAA1AB8AAAABAAAAAAA2AB8AAAACAAAAAAA3AB8AAAABAAAAAAA4AB8AAAACAAAAAAA5AB8AAAABAAAAAAA6AB8AAAACAAAAAAA7AB8AAAABAAAAAAA8AB8AAAABAAAAAAA8ACAAAAABAAEAAAA8ACEAAAABAAIAAAA9AB8AAAACAAAAAAA9ACAAAAACAAEAAAA9ACEAAAACAAIAAAA+AB8AAAABAAAAAAA+ACAAAAABAAEAAAA+ACEAAAABAAIAAAA/AB8AAAACAAAAAAA/ACAAAAACAAEAAAA/ACEAAAACAAIAAABAAB8AAAABAAAAAABAACAAAAABAAEAAABAACEAAAABAAIAAABBAB8AAAACAAAAAABBACAAAAACAAEAAABBACEAAAACAAIAAABCAB8AAAABAAAAAABCACAAAAABAAEAAABCACEAAAABAAIAAABDAB8AAAACAAAAAABDACAAAAACAAEAAABDACEAAAACAAIAAABEAB8AAAABAAAAAABEACAAAAABAAEAAABEACEAAAABAAIAAABFAB8AAAACAAAAAABFACAAAAACAAEAAABFACEAAAACAAIAAABGAB8AAAABAAAAAABGACAAAAABAAEAAABGACEAAAABAAIAAABHAB8AAAACAAAAAABHACAAAAACAAEAAABHACEAAAACAAIAAABIAB8AAAABAAAAAABIACAAAAABAAEAAABIACEAAAABAAIAAABJAB8AAAACAAAAAABJACAAAAACAAEAAABJACEAAAACAAIAAABKAB8AAAABAAAAAABKACAAAAABAAEAAABKACEAAAABAAIAAABLAB8AAAACAAAAAABLACAAAAACAAEAAABLACEAAAACAAIAAABMAB8AAAABAAAAAABMACAAAAABAAEAAABMACEAAAABAAIAAABNAB8AAAACAAAAAABNACAAAAACAAEAAABNACEAAAACAAIAAABOAB8AAAABAAAAAABOACAAAAABAAEAAABOACEAAAABAAIAAABPAB8AAAACAAAAAABPACAAAAACAAEAAABPACEAAAACAAIAAABQAB8AAAABAAAAAABQACAAAAABAAEAAABQACEAAAABAAIAAABRAB8AAAACAAAAAABRACAAAAACAAEAAABRACEAAAACAAIAAABSAB8AAAABAAAAAABSACAAAAABAAEAAABSACEAAAABAAIAAABTAB8AAAACAAAAAABTACAAAAACAAEAAABTACEAAAACAAIAAABUAB8AAAABAAAAAABUACAAAAABAAEAAABUACEAAAABAAIAAABVAB8AAAACAAAAAABVACAAAAACAAEAAABVACEAAAACAAIAAABWAB8AAAABAAAAAABWACAAAAABAAEAAABWACEAAAABAAIAAABXAB8AAAACAAAAAABXACAAAAACAAEAAABXACEAAAACAAIAAABYAB8AAAABAAAAAABYACAAAAABAAEAAABYACEAAAABAAIAAABZAB8AAAACAAAAAABZACAAAAACAAEAAABZACEAAAACAAIAAABaAB8AAAABAAAAAABaACAAAAABAAEAAABaACEAAAABAAIAAABbAB8AAAACAAAAAABbACAAAAACAAEAAABbACEAAAACAAIAAABcAB8AAAABAAAAAABcACAAAAABAAEAAABcACEAAAABAAIAAABdAB8AAAACAAAAAABdACAAAAACAAEAAABdACEAAAACAAIAAABeAB8AAAABAAAAAABeACAAAAABAAEAAABeACEAAAABAAIAAABfAB8AAAACAAAAAABfACAAAAACAAEAAABfACEAAAACAAIAAABgAB8AAAABAAAAAABgACAAAAABAAEAAABgACEAAAABAAIAAABhAB8AAAACAAAAAABhACAAAAACAAEAAABhACEAAAACAAIAAABiAB8AAAABAAAAAABiACAAAAABAAEAAABiACEAAAABAAIAAABjAB8AAAACAAAAAABjACAAAAACAAEAAABjACEAAAACAAIAAABkAB8AAAABAAAAAABkACAAAAABAAEAAABkACEAAAABAAIAAABlAB8AAAACAAAAAABlACAAAAACAAEAAABlACEAAAACAAIAAABmAB8AAAABAAAAAABmACAAAAABAAEAAABmACEAAAABAAIAAABnAB8AAAACAAAAAABnACAAAAACAAEAAABnACEAAAACAAIAAABoAB8AAAABAAAAAABoACAAAAABAAEAAABoACEAAAABAAIAAABpAB8AAAACAAAAAABpACAAAAACAAEAAABpACEAAAACAAIAAABqAB8AAAABAAAAAABqACAAAAABAAEAAABqACEAAAABAAIAAABrAB8AAAACAAAAAABrACAAAAACAAEAAABrACEAAAACAAIAAABsAB8AAAABAAAAAABsACAAAAABAAEAAABsACEAAAABAAIAAABtAB8AAAACAAAAAABtACAAAAACAAEAAABtACEAAAACAAIAAABuAB8AAAABAAAAAABuACAAAAABAAEAAABuACEAAAABAAIAAABvAB8AAAACAAAAAABvACAAAAACAAEAAABvACEAAAACAAIAAABwAB8AAAABAAAAAABwACAAAAABAAEAAABwACEAAAABAAIAAABxAB8AAAACAAAAAABxACAAAAACAAEAAABxACEAAAACAAIAAAByAB8AAAABAAAAAAByACAAAAABAAEAAAByACEAAAABAAIAAABzAB8AAAACAAAAAABzACAAAAACAAEAAABzACEAAAACAAIAAAA=")
tile_set = SubResource("TileSet_6nugs")

[node name="spawn" parent="." instance=ExtResource("7_mtfop")]
position = Vector2(1015, 469)

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "0"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="ThemeSong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_6nugs")
volume_db = -2.0
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
